--- a/common/config/rush/.npmrc
+++ b/common/config/rush/.npmrc
@@ -19,5 +19,5 @@
 #   //registry.npmjs.org/:_authToken=${NPM_AUTH_TOKEN}
 #
 registry=https://localhost:4873
-always-auth=false
+always-auth=true
 //localhost:4873/:_authToken="fip2DuslEYkj/fWmDxodFQ=="
